# s3-cargo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  README.md  mkdocs.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  pre-commit.yml
docs/: cargoconf.md  cargoconf.rst  conf.py  index.rst  project.md
example/: fetch.py
s3_cargo/: __init__.py  cargoconf.py  cargomain.py  msgformat.py
s3cargo/: __init__.py  cargoconf.py  cargomain.py  utils.py
test/: test_close_session.py  test_msgformat.py  test_open_session.py  test_session.py  utils.py
