[tool.poetry]
name = "s3-cargo"
version = "2023.1"
description = "Manage your projects in S3 buckets."
authors = [
    "MONTANA Knowledge Management ltd. <info@distiller.dev>",
]
license = "AGPL"
readme="README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General"
]

[tool.poetry.dependencies]
python = "^3.10, <3.11"
PyYAML = "^6.0"
pydantic = "^1.9.0"
boto3 = "^1.20.49"
mkdocs = "^1.2.3"
mkdocs-material = ">7.3"
mkdocs-git-revision-date-plugin = "^0.3.1"
mkdocstrings = ">0.16.0"
pyunpack = "^0.2.2"
patool = "^1.12"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
pre-commit = "*"
pytest = "*"
isort = "*"
pyupgrade = "*"
pylint = "*"
pytest-random-order = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# DEVTOOLS CONFIG #

#BLACK
[tool.black]
line-length = 120
target-version = ['py39']
# force-exclude = '''
#   (
#     resources/
#   | tests/
#   )
# '''
quiet = true


# COVERAGE
# https://coverage.readthedocs.io/en/6.1.1/config.html

[tool.coverage.run]
command_line = "-m py.test --random-order"
source = ['src']
branch = true
# omit = []

[tool.coverage.report]
sort = "cover"
exclude_lines = [
    'if __name__ == "__main__":',
    'def __repr__',
    'def __str',
    '@(abc\.)?abstractmethod'
]
omit = ['tests']



# ISORT
# https://pycqa.github.io/isort/docs/configuration/options.html

[tool.isort]
profile = "black"
line_length = 120
case_sensitive = true
use_parentheses = false
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
quiet = true

[tool.pylint.MASTER]
max-line-length = 120
fail-under = 0.85
ignore = ['LICENSE']
ignore-paths = ['tests', 'resources']
disable = [
    "bad-continuation",
    "duplicate-code",
    "invalid-name",
    "missing-docstring",
    "too-few-public-methods",
]

# [too.pylint.message_control]
# max-line-length = 80
# disable = [
#   "missing-docstring",
#   "unused-argument",
#   "no-value-for-parameter",
#   "no-member",
#   "no-else-return",
#   "bad-whitespace",
#   "bad-continuation",
#   "line-too-long",
#   "fixme",
#   "protected-access",
#   "too-few-public-methods",
# ]
